<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mission</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo">logo</string>
    <string name="mission">Mission</string>
    <string name="shortM">Short</string>
    <string name="medium">Medium</string>
    <string name="longM">Long</string>
    <string name="settings">Settings</string>

</resources>
